--- a/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
@@ -1,18 +1,10 @@
 <ion-view on-swipe-left="addOneWeek()" on-swipe-right="substractOneWeek()" view-title="{{'Week ' + weekCount}}" hide-back-button='true'>
-
     <ion-nav-buttons side="right">
-<!--
-        <button class="button button-clear" ui-sref='leftSideMenu'>
-            <i class='icon ion-ios-plus-outline'></i>
-        </button>
--->
-    </ion-nav-buttons>
-    <ion-nav-buttons side="left">
         <button class="button button-clear custom-color" ng-click='showActionSheet()'>
             <i class='icon ion-navicon'></i>
         </button>
     </ion-nav-buttons>
-    <ion-nav-buttons side="right">
+    <ion-nav-buttons side="left">
         <button class="button button-clear custom-color" ng-hide="expressImportState" ng-click='ExpressImport()'>
             Express<br>Import
         </button>
@@ -22,16 +14,20 @@
     </ion-nav-buttons>
     <ion-content>
         <ion-refresher on-refresh='refreshData()'></ion-refresher>
+        
+        <br>
         <ion-list>
-            <ion-item ng-repeat='day in weeklyTimesheet'>
+            <ion-item ng-repeat='day in weeklyTimesheet' ui-sref='dayProgress({selectedDate :day.dateFull})'>
                 <div class="row">
-                    <div class="col">{{day.date}}</div>
-                    <div class="col">{{day.hours}} h</div>
+                    <div class="col"><center>{{day.date}}</center></div>
+                    <div class="col"><center>{{day.hours}}h</center></div>
                     <div class="col">
-                        <button class="button button-small button-clear" ui-sref='dayProgress({selectedDate :day.dateFull})'>
+                      <center>
+                        <button class="button button-small button-clear">
                             <i class='icon icon-approved' ng-show={{day.state}}></i>
                             <i class='icon icon-suggested' ng-hide={{day.state}}></i>
                         </button>
+                        </center>
                     </div>
                 </div>
             </ion-item>
