--- a/Pzl.Did.Mobile.Client/www/didApp/login/login.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/login/login.html
@@ -5,12 +5,12 @@
       </div>
       <div class='list list-inset'>
               <label class="item item-input">
-                  <i class="icon icon-username"></i>
+                  <i class="icon icon-username placeholder-icon"></i>
                   <input class='clear' type="email" required placeholder="Username" name='txtUsername' ng-model='user.username'>
               </label>
-              
+
               <label class="item item-input">
-                  <i class="icon icon-password"></i>
+                  <i class="icon icon-password placeholder-icon"></i>
                   <input type="password" required placeholder="Password" ng-model='user.password'>
               </label>
       </div>
