--- a/Pzl.Did.Mobile.Client/www/didApp/DataLoad/dataLoad.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/DataLoad/dataLoad.html
@@ -1,6 +1,7 @@
-<ion-view view-title="DIDApp">
+<ion-view view-title="DiD It" hide-back-button='true'>
     <ion-content>
       <center>
+          
       </center>
     </ion-content>
 </ion-view>
