--- a/Pzl.Did.Mobile.Client/www/didApp/login/login.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/login/login.html
@@ -3,18 +3,18 @@
       <div class='profile-picture-container'>
         <img ng-src="img/default-profile.png" class='profile-picture'/>
       </div>
-      <div class='list list-inset'>
-              <label class="item item-input">
+      <div class='list list-inset login-panel'>
+              <label class="item item-input login-input">
                   <i class="icon icon-username placeholder-icon"></i>
-                  <input class='clear' type="email" required placeholder="Username" name='txtUsername' ng-model='user.username'>
+                  <input style="font-size:16px;" type="email" required placeholder="Username" name='txtUsername' ng-model='user.username'>
               </label>
 
-              <label class="item item-input">
+              <label class="item item-input login-input">
                   <i class="icon icon-password placeholder-icon"></i>
-                  <input type="password" required placeholder="Password" ng-model='user.password'>
+                  <input style="font-size:16px;" type="password" required placeholder="Password" ng-model='user.password'>
               </label>
       </div>
-
+        <br>
         <button class="button button-block button-custom" ng-click='login(user)'>
         <strong>Login</strong>
         </button>
