--- a/Pzl.Did.Mobile.Client/www/didApp/dayProgress/dayProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/dayProgress/dayProgress.html
@@ -3,12 +3,12 @@
         <ion-refresher on-refresh='refreshData()'></ion-refresher>
         
          <ion-list>
-          <ion-item class="item item-text-wrap item-button-right" ng-repeat='entry in dayTimeSheet'>
+          <ion-item class="item item-text-wrap item-button-right" ng-repeat='entry in dayTimeSheet' ng-click='loadEntryToEdit(entry.id)'>
             {{entry.title}}     
                 <span class="badge badge-balanced icon-badge" ng-show="entry.state=='Approved'||entry.state=='SystemConfirmed'||entry.state=='UserConfirmed'">{{entry.hours}}h</span>
                 <span class="badge badge-energized" ng-show="entry.state=='Suggested'||entry.state=='Imported'">{{entry.hours}}h</span>
-                <span class="badge badge-assertive" ng-show="entry.state=='UserIgnored'||entry.state=='SystemIgnored'">{{entry.hours}}h</span>
-                <button class="button button-clear" ui-sref='EntryProgress({selectedId : entry.id })'>
+                <span class="badge badge-assertive" ng-show="entry.state=='UserIgnored'||entry.state=='SystemIgnored'||entry.state=='IgnoreApproved'">{{entry.hours}}h</span>
+                <button class="button button-clear">
                     <i class="icon icon-ignore" ng-show="entry.state=='UserIgnored'"></i>
                     <i class="icon icon-ignore" ng-show="entry.state=='SystemIgnored'"></i>
                     <i class="icon icon-ignore" ng-show="entry.state=='IgnoreApproved'"></i>
