--- a/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/weekProgress/weekProgress.html
@@ -6,7 +6,7 @@
     </ion-nav-buttons>
     <ion-nav-buttons side="left">
         <button class="button button-clear custom-color" ng-hide="expressImportState" ng-click='ExpressImport()'>
-          <i class='icon icon-import'></i>
+            <i class='icon icon-import'></i>
         </button>
         <button class="button button-clear custom-color" ng-disabled='false' ng-show="expressImportState" ng-click=''>
             <i class='icon icon-hourglass'></i>
@@ -15,33 +15,36 @@
     <ion-content>
         <ion-refresher on-refresh='refreshData()'></ion-refresher>
         <div class="row">
-          <div class="col hint-row left">
-            <i class='ion-ios-arrow-left'></i>
-            {{'Previous'}}
-          </div>
-          <div class="col"></div>
-          <div class="col hint-row center">
+            <div class="col hint-row left">
+                <i class='ion-ios-arrow-left'></i> {{'Previous'}}
+            </div>
+            <div class="col"></div>
+            <div class="col hint-row center">
 
-            <i class='ion-ios-arrow-down'></i>
-          </div>
-          <div class="col"></div>
-          <div class="col hint-row righ">
-            {{'Next'}}
-            <i class='ion-ios-arrow-right'></i>
-          </div>
+                <i class='ion-ios-arrow-down'></i>
+            </div>
+            <div class="col"></div>
+            <div class="col hint-row righ">
+                {{'Next'}}
+                <i class='ion-ios-arrow-right'></i>
+            </div>
         </div>
         <ion-list>
             <ion-item ng-repeat='day in weeklyTimesheet' ui-sref='dayProgress({selectedDate :day.dateFull})'>
                 <div class="row">
-                    <div class="col"><center>{{day.date}}</center></div>
-                    <div class="col"><center>{{day.hours}}h</center></div>
                     <div class="col">
-                      <center>
-                        <button class="button button-small button-clear">
-                            <i class='icon icon-approved' ng-show="day.state=='Confirmed'"></i>
-                            <i class='icon icon-coffee' ng-show="day.state=='Approved'"></i>
-                            <i class='icon icon-suggested' ng-show="day.state=='Suggested'"></i>
-                        </button>
+                        <center>{{day.date}}</center>
+                    </div>
+                    <div class="col">
+                        <center>{{day.hours}}h</center>
+                    </div>
+                    <div class="col">
+                        <center>
+                            <button class="button button-small button-clear">
+                                <i class='icon icon-approved' ng-show="day.state=='Confirmed'"></i>
+                                <i class='icon icon-coffee' ng-show="day.state=='Approved'"></i>
+                                <i class='icon icon-suggested' ng-show="day.state=='Suggested'"></i>
+                            </button>
                         </center>
                     </div>
                 </div>
@@ -50,45 +53,44 @@
         <br>
         <div class="padding">
             <center>
-               <div class="table">
-                  <div class="row">
-                     <div class="col" ng-show="stateWeek=='Confirmed'"></div>
-                     <div class="col">
-                       <div class="numberCircle confirmed">
-                         {{summaryHours[0]}}h
-                       </div>
-                       <p>
-                         Confirmed
-                       </p>
-                     </div>
-                     <div class="col" ng-hide="stateWeek=='Confirmed'">
-                       <div class="numberCircle unconfirmed">
-                         {{summaryHours[1]}}h
-                       </div>
-                       <p>
-                         Unconfirmed
-                       </p>
-                     </div>
-                     <div class="col">
-                       <div class="numberCircle ignored">
-                         {{summaryHours[2]}}h
-                       </div>
-                       <p>
-                         Ignored
-                       </p>
-                     </div>
-                     <div class="col" ng-show="stateWeek=='Confirmed'"></div>
-                  </div>
-               </div>
+                <div class="table">
+                    <div class="row">
+                        <div class="col" ng-show="stateWeek=='Confirmed'"></div>
+                        <div class="col">
+                            <div class="numberCircle confirmed">
+                                {{summaryHours[0]}}h
+                            </div>
+                            <p>
+                                Confirmed
+                            </p>
+                        </div>
+                        <div class="col" ng-hide="stateWeek=='Confirmed'">
+                            <div class="numberCircle unconfirmed">
+                                {{summaryHours[1]}}h
+                            </div>
+                            <p>
+                                Unconfirmed
+                            </p>
+                        </div>
+                        <div class="col">
+                            <div class="numberCircle ignored">
+                                {{summaryHours[2]}}h
+                            </div>
+                            <p>
+                                Ignored
+                            </p>
+                        </div>
+                        <div class="col" ng-show="stateWeek=='Confirmed'"></div>
+                    </div>
+                </div>
             </center>
-            <br>
-            <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'" ng-click='ApproveWeek()'>
-                This is What I DID
-            </button>
-            <center class="padding">
-               <!-- <button ng-disabled="true" class=" button button-block button-outline button-balanced" ng-show="stateWeek=='Confirmed'">Confirmed</button> -->
-                      <label class="text-confirmed" ng-show="stateWeek=='Confirmed'">Confirmed!</label>
-               <!--<img ng-src="img/success.png" class="img-approved" alt="" ng-show="stateWeek=='Confirmed'">-->
+            <div class="didbutton-container">
+                <button class="button button-block button-balanced" ng-show="stateWeek=='DidIt'" ng-click='ApproveWeek()'>
+                    This is What I DID
+                </button>
+            </div>
+            <center class="confirmMsg-container">
+                <img ng-src="img/confirmed.png" class="img-approved" alt="" ng-show="stateWeek=='Confirmed'">
             </center>
         </div>
     </ion-content>
