--- a/Pzl.Did.Mobile.Client/www/didApp/login/login.html
+++ b/Pzl.Did.Mobile.Client/www/didApp/login/login.html
@@ -1,23 +1,26 @@
 <ion-view view-title="DiD It" hide-back-button='true' hide-nav-bar="true">
-    <ion-content class='login-bg padding'>
-      <div class='profile-picture-container'>
-        <img ng-src="img/logo-dark-line.png" class='logo'/>
-      </div>
-      <div class='list list-inset login-panel'>
-              <label class="item item-input login-text-color login-input">
-                  <i class="icon icon-username placeholder-icon"></i>
-                  <input class="login-text-color" style="font-size:16px;" type="email" required placeholder="Username" name='txtUsername' ng-model='user.username'>
-              </label>
+    <ion-content class='login-bg'>
+        <div class='profile-picture-container'>
+            <img ng-src="img/logo.png" class='logo' />
+        </div>
+        <div class="login-padding">
+            <div class='list list-inset login-panel'>
+                <label class="item item-input login-text-color login-input">
+                    <i class="icon icon-username placeholder-icon"></i>
+                    <input class="login-text-color" style="font-size:16px;" type="email" required placeholder="Username" name='txtUsername' ng-model='user.username'>
+                </label>
 
-              <label class="item item-input login-text-color login-input">
-                  <i class="icon icon-password placeholder-icon"></i>
-                  <input style="font-size:16px;" type="password" required placeholder="Password" ng-model='user.password'>
-              </label>
-      </div>
-        <br>
-        <button class="button button-block button-custom" ng-click='login(user)'>
-        <strong>Login</strong>
+                <label class="item item-input login-text-color login-input">
+                    <i class="icon icon-password placeholder-icon"></i>
+                    <input style="font-size:16px;" type="password" required placeholder="Password" ng-model='user.password'>
+                </label>
+            </div>
+        </div>
+        <br><br>
+        <div class="login-padding">
+            <button class="button button-block button-custom" ng-click='login(user)'>
+            <strong>Login</strong>
         </button>
-
+        </div>      
     </ion-content>
 </ion-view>
